env/code_53befe8c8a219/stderr.txt
  File "main.py", line 10
    arr1.[::-1]
         ^
SyntaxError: invalid syntax
